--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,6 @@
-jobs:
-  include:
-    - arch: amd64
-      dist: trusty
-    - arch: amd64
-      dist: xenial
-    - arch: amd64
-      dist: bionic
-    - arch: amd64
-      dist: focal
-    # power jobs  
-    - arch: ppc64le
-      dist: trusty
-    - arch: ppc64le
-      dist: xenial
-    - arch: ppc64le
-      dist: bionic
-    - arch: ppc64le
-      dist: focal
+arch:
+  - amd64
+  - ppc64le
    
 sudo: required
 langauge: java
@@ -25,6 +9,7 @@ jdk:
   - jdk8
   - openjdk11
   - apdotopenjdk11
+  
 script:
   - sudo apt-get update -y
   - sudo apt-cache search adoptopenjdk
