--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 arch:
  - amd64
  - ppc64le
+ - s390x
+ - arm64
  
 language: java
 sudo: false
@@ -10,5 +12,4 @@ jdk:
   - openjdk11
 
 script:
-  - gradle --version
-  - ./gradlew --version
+  - java -version
