--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 arch:
- - amd64
+ #- amd64
  - ppc64le
- - s390x
- - arm64
+ #- s390x
+ #- arm64
  
 language: java
 sudo: false
 
 jdk:
   - openjdk8
-  - openjdk11
+  #- openjdk11
 
 script:
   - java -version
+  - sudo apt update -y 
+  - sudo apt install adoptopenjdk-8-hotspot -y 
