--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 jobs:
   include:
-    - arch: amd64
-      dist: trusty
-    - arch: amd64
+    - arch: s390x
       dist: xenial
-    - arch: amd64
+    - arch: s390x
       dist: bionic
-    - arch: amd64
+    - arch: s390x
       dist: focal
     # power jobs  
-    - arch: ppc64le
-      dist: trusty
     - arch: ppc64le
       dist: xenial
     - arch: ppc64le
