--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,18 @@ arch:
  #- amd64
  - ppc64le
  - s390x
- #- arm64
+ - arm64
  
 dist: bionic
 language: java
 
-jdk:
-  - openjdk8
+#jdk:
+#  - openjdk8
   #- openjdk11
 
 script:
-  - java -version
-  - sudo apt update -y 
-  - sudo apt install adoptopenjdk-8-hotspot -y 
+  - mkdir -p /opt/maven
+  - curl https://downloads.apache.org/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz|tar -xz --strip 1 -C /opt/maven
+  - export MAVEN_HOME=/opt/maven
+  - export PATH=${MAVEN_HOME}/bin:${PATH}
+  - mvn --version
