--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ jobs:
     - arch: ppc64le
       dist: xenial
       group: edge
+    - arch: ppc64le
+      dist: bionic
+      group: edge
+    - arch: ppc64le
+      dist: focal
+      group: edge
 
 language: java
 jdk: openjdk8
